[tool.poetry]
name = "application-logger"
version = "0.1.0"
description = "A Python tool designed to seamlessly log job application details into a Google Sheet"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
